--- a/roadmaps.dev/src/views/Home/Home.scss
+++ b/roadmaps.dev/src/views/Home/Home.scss
@@ -1,13 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
-.header {
+.wrapper-home {
   position: absolute;
   margin: 0 auto;
   width: 90vw;
   height: 100vh;
-  /* padding: 3.125
-em
-; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -58,6 +55,10 @@ em
 }
 
 @media only screen and (max-width: 850px) {
+  .wrapper-home {
+    width: inherit;
+  }
+  
   .section-right {
     display: none;
   }
