--- a/roadmaps.dev/src/App.scss
+++ b/roadmaps.dev/src/App.scss
@@ -2,7 +2,7 @@
 
 $color-primary: #8a01fe;
 $color-dark: #333;
-$color-light: #fff;
+$color-light: #F1F1F1;
 
 * {
   padding: 0;
@@ -11,7 +11,13 @@ $color-light: #fff;
   font-family: "Ubuntu", sans-serif;
 }
 
+body {
+  background-color: $color-light;
+}
+
 .wrapper-navbar {
+  min-height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,10 +25,11 @@ $color-light: #fff;
 
 .navbar {
   width: 90vw;
+  max-width: 1200px;
   height: 88px;
-  padding: 50px 0px;
-  position: absolute;
-  z-index: 1;
+  padding: 60px 0px;
+  // position: absolute;
+  // z-index: 1;
   display: flex;
   background-color: $color-light;
   justify-content: space-between;
@@ -76,8 +83,11 @@ $color-light: #fff;
     display: block;
   }
   .navbar {
-    padding: 0;
-    height: auto;
+    width: 92vw;
+    // height: auto;
+    // padding: 0;
+    position: relative;
+    z-index: 5;
   }
 
   .logo {
@@ -92,12 +102,13 @@ $color-light: #fff;
     width: 100%;
     height: 100vh;
     justify-content: center;
-    background: #fff;
+    background: $color-light;
     transition: all 0.5s ease;
   }
 
   .mobile-menu {
-    margin-top: 0px;
+    margin-top: 100%;
+    padding-top: 100px;
   }
 
   .nav-row {
