--- a/roadmaps.dev/src/views/Home/Home.scss
+++ b/roadmaps.dev/src/views/Home/Home.scss
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
 .wrapper-home {
-  position: absolute;
-  margin: 0 auto;
+  
   width: 90vw;
-  height: 100vh;
+  max-width: 1200px;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -51,7 +51,7 @@
 
 /** SECTION RIGHT **/
 .image {
-  width: 30vmax;
+  width: 25vmax;
 }
 
 @media only screen and (max-width: 850px) {
