--- a/roadmaps.dev/src/views/Roadmaps/Roadmaps.scss
+++ b/roadmaps.dev/src/views/Roadmaps/Roadmaps.scss
@@ -1,17 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
-.wrapper-page-roadmaps {
-  position: absolute;
-  width: 90vw;
-  height: 100vh;
-  margin: 0 auto;
-  padding-top: 140px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
 .text-header-roadmaps {
+  margin-top: 30px;
   color: #333;
 }
 
@@ -24,5 +14,4 @@
   height: 300px;
   border: 1px solid #8a01fe;
   border-radius: 5px;
-
 }
