--- a/roadmaps.dev/src/components/BoxContainer/BoxContainer.scss
+++ b/roadmaps.dev/src/components/BoxContainer/BoxContainer.scss
@@ -5,5 +5,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 0 auto;
+}
+
+@media (max-width: 850px) {
+  .box-container {
+    padding-right: 20px;
+  }
 }
