--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 $color-primary: #8a01fe;
 $color-dark: #333;
 $color-light: #F1F1F1;
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
-  font-family: "Ubuntu", sans-serif;
+  // font-family: "Ubuntu", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -16,12 +16,11 @@ body {
 }
 
 .wrapper-navbar {
-  min-height: 100vh;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
 }
 
 .navbar {
@@ -29,8 +28,6 @@ body {
   max-width: 1200px;
   height: 88px;
   padding: 60px 0px;
-  // position: absolute;
-  // z-index: 1;
   display: flex;
   background-color: $color-light;
   justify-content: space-between;
