--- a/src/components/BoxContainer/BoxContainer.scss
+++ b/src/components/BoxContainer/BoxContainer.scss
@@ -1,7 +1,9 @@
 .box-container {
+  height: 100%;
   width: 90vw;
   max-width: 1200px;
-  min-height: 100vh;
+  margin-bottom: 60px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
