--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
   display: flex;
-  background-color: #CCC;
+  background-color: #F6F6F6;
   width: 100%;
   text-align: center;
   justify-content: space-around;
