--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
 .wrapper-home {
+  height: 100%;
   width: 90vw;
   max-width: 1200px;
   display: flex;
